*** Amazon Pay Changelog ***

= 2.5.0 - 2023-xx-xx =

* Add - Plugin review Prompt.
* Fix - Amazon Pay button is displayed on Product pages even when product is Out Of Stock.
* Fix - WooCommerce Blocks compatibility.
* Update - PHP 8 compatibility fixes.
* Update - Update WP and WC tested up to.

= 2.4.1 - 2023-02-15 =

* Fix - Identify if the provided order id refers to an actual order completed through Amazon Pay.

= 2.4.0 - 2023-01-26 =

* Update - Bumped required WordPress and WooCommerce versions.
* Fix - Address street missing in billing address (Germany addresses).
* Fix - Activate alexa delivery notifications request format.
* Fix - Allowed currencies population is not taking into account status of compatible multi currency plugin.
* Fix - Cancelled authorizations should mark order as "Pending payment".
* Fix - Compatibility with WooCommerce HPOS (custom order tables).
* Fix - Fatal error when merchant was not migrated to V2 keys.

= 2.3.0 - 2022-10-11 =

* Add - Adds estimatedOrderAmount attribute to Amazon Pay button.
* Add - Adds support for Amazon Pay on Cart and Checkout Blocks of WooCommerce Blocks.
* Add - Adds the estimated order amount in every place available by the plugin.
* Fix - If the currency changes while in the FrontEnd the Gateway will alter its availability based on its settings.
* Fix - Warning shouldn't appear on Single product regarding the 'subscriptions_enabled' not being set.

= 2.2.4 - 2022-08-12 =

* Fix - Infinite Loop causing Memory Exhaustion.

= 2.2.3 - 2022-08-12 =

* Fix - Pick the proper currency when it gets changed by and external multi-currency plugins.
* Fix - Addressed possible fatal errors on widgets page and order pay endpoint.
* Fix - Addressed possible fatal errors when Amazon credentials partially provided.

= 2.2.2 - 2022-06-17 =

* Fix - Require phone number only when purchasing physical products.

= 2.2.1 - 2022-06-13 =

* Fix - Addresses incorrect gateway availability logic.

= 2.2.0 - 2022-05-30 =
