@@ -42,28 +42,29 @@ class WC_Amazon_Payments_Advanced_Block_Compat_Express extends WC_Amazon_Payment
 	 * @return array
 	 */
 	public function get_payment_method_data() {
-		$wc_apa_gateway = wc_apa()->get_gateway();
+        $wc_apa_gateway = wc_apa()->get_gateway();
 
-		$checkout_session = $wc_apa_gateway->get_checkout_session_id() ? $wc_apa_gateway->get_checkout_session() : null;
+        $checkout_session = $wc_apa_gateway->get_checkout_session_id() ? $wc_apa_gateway->get_checkout_session() : null;
 
-		return array_merge(
-			$this->settings,
-			array(
-				'loggedIn'              => ! is_admin() && $checkout_session && ! is_wp_error( $checkout_session ),
-				'supports'              => $this->get_supported_features(),
-				'logoutUrl'             => $wc_apa_gateway->get_amazon_logout_url(),
-				'logoutMessage'         => apply_filters( 'woocommerce_amazon_pa_checkout_logout_message', __( 'You\'re logged in with your Amazon Account.', 'woocommerce-gateway-amazon-payments-advanced' ) ),
-				'selectedPaymentMethod' => esc_html( $wc_apa_gateway->get_selected_payment_label( $checkout_session ) ),
-				'hasPaymentPreferences' => $wc_apa_gateway->has_payment_preferences( $checkout_session ),
-				'allOtherGateways'      => $this->gateways_to_unset_on_fe(),
-				'allowedCurrencies'     => $this->get_allowed_currencies(),
-				'amazonPayPreviewUrl'   => esc_url( wc_apa()->plugin_url . '/build/images/amazon-pay-preview.png' ),
-				'amazonAddress'         => array(
-					'amazonBilling'  => $checkout_session && ! is_wp_error( $checkout_session ) && ! empty( $checkout_session->billingAddress ) ? WC_Amazon_Payments_Advanced_API::format_address( $checkout_session->billingAddress ) : null, // phpcs:ignore WordPress.NamingConventions
-					'amazonShipping' => $checkout_session && ! is_wp_error( $checkout_session ) && ! empty( $checkout_session->shippingAddress ) ? WC_Amazon_Payments_Advanced_API::format_address( $checkout_session->shippingAddress ) : null, // phpcs:ignore WordPress.NamingConventions
-				),
-			)
-		);
+        return array(
+            'title'                 => $this->settings['title'],
+            'description'           => $this->settings['description'],
+            'hide_button_mode'      => $this->settings['hide_button_mode'],
+            'loggedIn'              => ! is_admin() && $checkout_session && ! is_wp_error( $checkout_session ) && true === $wc_apa_gateway->is_checkout_session_still_valid( $checkout_session ),
+            'supports'              => $this->get_supported_features(),
+            'logoutUrl'             => $wc_apa_gateway->get_amazon_logout_url(),
+            'logoutMessage'         => apply_filters( 'woocommerce_amazon_pa_checkout_logout_message', __( 'You\'re logged in with your Amazon Account.', 'woocommerce-gateway-amazon-payments-advanced' ) ),
+            'selectedPaymentMethod' => esc_html( $wc_apa_gateway->get_selected_payment_label( $checkout_session ) ),
+            'hasPaymentPreferences' => $wc_apa_gateway->has_payment_preferences( $checkout_session ),
+            'allOtherGateways'      => $this->gateways_to_unset_on_fe(),
+            'allowedCurrencies'     => $this->get_allowed_currencies(),
+            'amazonPayPreviewUrl'   => esc_url( wc_apa()->plugin_url . '/build/images/amazon-pay-preview.png' ),
+            'amazonAddress'         => array(
+                'amazonBilling'  => $checkout_session && ! is_wp_error( $checkout_session ) && ! empty( $checkout_session->billingAddress ) ? WC_Amazon_Payments_Advanced_API::format_address( $checkout_session->billingAddress ) : null, // phpcs:ignore WordPress.NamingConventions
+                'amazonShipping' => $checkout_session && ! is_wp_error( $checkout_session ) && ! empty( $checkout_session->shippingAddress ) ? WC_Amazon_Payments_Advanced_API::format_address( $checkout_session->shippingAddress ) : null, // phpcs:ignore WordPress.NamingConventions
+            ),
+        );
+
 	}
 
 	/**
